--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development nodemon src/server.ts",
-    "start:prod": "cross-env NODE_ENV=production ts-node src/server.ts"
+    "start": "cross-env NODE_ENV=development node -r ts-node/register --watch --env-file=.env src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production node -r ts-node/register --env-file=.env src/server.ts"
   },
   "keywords": [],
   "author": "",
